correction contrast

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6050,7 +6050,7 @@ textarea.form-control-lg {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15%;
+  width: 8%;
   padding: 0;
   color: #fff;
   text-align: center;
@@ -6058,6 +6058,7 @@ textarea.form-control-lg {
   border: 0;
   opacity: 0.5;
   transition: opacity 0.15s ease;
+  background-color: #000;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-control-prev,
@@ -6065,13 +6066,11 @@ textarea.form-control-lg {
     transition: none;
   }
 }
-.carousel-control-prev:hover, .carousel-control-prev:focus,
-.carousel-control-next:hover,
-.carousel-control-next:focus {
+.carousel-control-prev:hover, .carousel-control-next:hover {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 .carousel-control-prev {
@@ -6085,8 +6084,8 @@ textarea.form-control-lg {
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
-  width: 2rem;
-  height: 2rem;
+  width: 6rem;
+  height: 6rem;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
